--- a/rbintegrations/static/css/trello/trello.less
+++ b/rbintegrations/static/css/trello/trello.less
@@ -46,6 +46,10 @@
   z-index: 2;
 }
 
+.trello-field.selectize-dropdown {
+  z-index: @z-index-menu;
+}
+
 .trello-card-card {
   a {
     color: black;
